--- a/src/indivoAccountCreator/IndivoAccountCreator.mxml
+++ b/src/indivoAccountCreator/IndivoAccountCreator.mxml
@@ -12,7 +12,9 @@
 
 		import mx.controls.Alert;
 		import mx.core.Window;
+		import mx.events.DataGridEvent;
 		import mx.events.FlexNativeMenuEvent;
+		import mx.events.ListEvent;
 		import mx.logging.ILogger;
 		import mx.logging.Log;
 		import mx.logging.LogEventLevel;
@@ -57,6 +59,7 @@
 
 		private var _isProcessingAll:Boolean = false;
 		private var _accountsToCreate:Vector.<XML>;
+		private var sourceXmlString:String;
 
 		/**
 		 * Called when the application is rendered. The method points the sourceFile File object
@@ -108,6 +111,7 @@
 				saveData();
 				logResult("Created new source data file \"" + sourceFile.nativePath + "\"");
 			}
+			sourceXmlString = sourceXml.toXMLString();
 			logResult("Indivo Server Base URL: " + _baseUrl);
 			_admin = new Admin(_adminConsumerKey, _adminConsumerSecret, _baseUrl);
 		}
@@ -134,6 +138,8 @@
 		 */
 		private function windowClosingHandler(event:Event):void
 		{
+			// change the focus to something other than the accountDataGrid so that any pending changes are saved (for an item in edit mode)
+			resultsLog.setFocus();
 			saveData();
 		}
 
@@ -144,7 +150,10 @@
 		private function saveData():void
 		{
 			createXMLData();
-			saveAccountData();
+			if (sourceXml && sourceXml.toXMLString() != sourceXmlString)
+			{
+				saveAccountData();
+			}
 			_settingsFileStore.settings = _settings;
 			_settingsFileStore.saveSettings();
 		}
@@ -191,7 +200,6 @@
 				sourceXml = <dataroot/>;
 
 			sourceXml.indivoServerBaseURL = _baseUrl;
-			sourceXml.saveDate = new Date().toString();
 		}
 
 		/**
